--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.4.1",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
